crates/math-core/tests/snapshots/error_test__displaystyle_in_subscript.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x_\\displaystyle x}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:4 ]
   │
 1 │ {x_\displaystyle x}
   │    ──────┬──────  
   │          ╰──────── used as argument
───╯
