crates/math-core/tests/snapshots/error_test__dollar_delimiters_around_input.snap
---
source: crates/math-core/tests/error_test.rs
expression: $x^2$
---
Error: Unexpected "$".
   ╭─[ <input>:1:1 ]
   │
 1 │ $x^2$
   │ ┬  
   │ ╰── unexpected dollar sign
───╯
