crates/math-core/tests/snapshots/error_test__dollar_in_math_mode.snap
---
source: crates/math-core/tests/error_test.rs
expression: a$b
---
Error: Unexpected "$".
   ╭─[ <input>:1:2 ]
   │
 1 │ a$b
   │  ┬  
   │  ╰── unexpected dollar sign
───╯
