crates/math-core/tests/snapshots/error_test__dollar_in_operatorname.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname{a$b}"
---
Error: Unexpected "$".
   ╭─[ <input>:1:16 ]
   │
 1 │ \operatorname{a$b}
   │                ┬  
   │                ╰── unexpected dollar sign
───╯
