crates/math-core/tests/snapshots/error_test__gdef_as_argument.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\gdef\\zzz{1}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\gdef\zzz{1}
   │      ──┬──  
   │        ╰──── used as argument
───╯
