crates/math-core/tests/snapshots/error_test__global_at_end.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\global"
---
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:8 ]
   │
 1 │ \global
   │        │ 
   │        ╰─ expected an argument here
───╯
