crates/math-core/tests/snapshots/error_test__global_nested.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\newcommand{\\zzz}{\\global\\let\\yyy\\alpha}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:19 ]
   │
 1 │ \newcommand{\zzz}{\global\let\yyy\alpha}
   │                   ───┬───  
   │                      ╰───── used as argument
───╯
