crates/math-core/tests/snapshots/error_test__global_newcommand.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\global\\newcommand{\\zzz}{1}"
---
Error: Found "\global", which may only appear directly before \let.
   ╭─[ <input>:1:8 ]
   │
 1 │ \global\newcommand{\zzz}{1}
   │        ─────┬─────  
   │             ╰─────── cannot be used here
───╯
